# opdb-rust

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  tarpaulin.toml
.github/workflows/: validation.yml
data/: df_list.json  df_type_infos.json  pirates.json  ships.json
scraper/: Cargo.toml
scraper/src/: client.rs  df.rs  fetcher.rs  main.rs  output_writer.rs  types.rs
scraper/src/category/: scraper.rs
scraper/src/df/: df_scraper.rs  df_type.rs  mod.rs  models.rs  parser.rs  scraper.rs  types.rs
scraper/src/pirates/: models.rs  scraper.rs
scraper/src/ships/: mod.rs  models.rs  scraper.rs
scraper/src/utils/: parser.rs
