[package]
name = "opdb-scrapper"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Rifqi Fatchurrahman <muh_rif@live.com>"]

[dependencies]
serde_json = "1.0.128"
env_logger = "0.11.5"
itertools = "0.13.0"
log = "0.4.22"
reqwest = "0.12.8"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
strsim = "0.11.1"
clap = { version = "4.5.20", features = ["derive"] }
scraper = "0.20.0"
select = "0.6.0"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.64"

[dev-dependencies]
mockall = "0.13.0"
mockito = "1.5.0"
