[package]
name = "opdb-scrapper"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(rust_analyzer)'] }

[dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
itertools = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
reqwest = { workspace = true }
strsim = { workspace = true }
clap = { workspace = true }
scraper = { workspace = true }

[dev-dependencies]
mockall = "0.13.1"
mockito = "1.7.0"
